# kalitron-telegram-bot

./: .env.example  .gitignore  README.md  pyproject.toml
config/: access_codes.csv  client_registry.csv
src/kalitron_telegram_bot/: __init__.py  application.py  channel_ports.py  client_registry.py  config.py  domain.py  errors.py  gateway_adapter.py  gateway_client.py  gateway_contract.py  gateway_http_client.py  handlers.py  main.py  service.py  session_store.py  telegram_adapter.py
tests/: test_gateway_client.py
